fix: fixes after first testing round (wip)
