# plugins/cmd/branchprotection-plugin/handlers/types.go
@@ -33,8 +33,6 @@ type BranchProtectionRequest struct {
 type RequiredStatusChecks struct {
 	// Require branches to be up to date before merging.
 	Strict bool `json:"strict" validate:"required"`
-	// "**Closing down notice**: The list of status checks to require in order to merge into this branch. If any of these checks have recently been set by a particular GitHub App, they will be required to come from that app in future for the branch to merge. Use `checks` instead of `contexts` for more fine-grained control."
-	Contexts []string `json:"contexts" validate:"required"`
 	// The list of status checks to require in order to merge into this branch.
 	Checks []StatusCheck `json:"checks,omitempty"`
 }
